<resources>
    <string name="app_name">REDIMED Health Work Injury</string>
    <string name="green_btn">Rehab</string>
    <string name="blue_btn">Specialist</string>
    <string name="red_btn">GP</string>
    <string name="orange_btn">Setting</string>
    <string name="urgent_btn">About Us</string>
    <string name="faq_btn">FAQs</string>
    <string name="call_btn">Call Us</string>
    <string name="login_btn">Login</string>
    <string name="phone_call">0892300900</string>
    <string name="time_available">08:00AM - 05:00PM</string>
    <string name="contain_bottom1">Personalised + Customised,</string>
    <string name="contain_HEALTH">HEALTH</string>
    <string name="contain_CARE">CARE</string>
    <string name="contain_bottom2">anywhere</string>
    <string name="username">Username</string>
    <string name="password">PassWord</string>
    <string name="confirm_exit">Press Back button again to exit</string>
    <string name="fileName">suburb.json</string>
    <string name="title_activity_work">WorkActivity</string>
    <string name="australiaFormatPhone">+61</string>
    <string name="isRequired">Field is required!</string>
    <string name="contactPhoneRequired">Contact Phone is required!</string>
    <string name="contactPhoneFormat">Mobile Number wrong formatted</string>
    <string name="emailValid">Email address not valid</string>
    <string name="companyPhoneFormat">Company Phone wrong formatted</string>
    <string name="contentDialogSuccessAppointment">Please be informed that your enquiry has been received and our Redimed staff will contact you shortly.</string>
    <string name="progressMakeAppointmentContent">Please wait..</string>
    <string name="dialogSuccess">Success</string>
    <string name="dialogError">Error</string>
    <string name="contentDialogErrorFrom">Please input required information</string>
    <string name="confirmSaveInfo">Do you want to save information</string>
    <string name="title_action_bar">Work Injury Clinic Booking</string>
    <string name="title_action_bar_login">Login</string>
    <string name="title_action_bar_setting">Setting</string>
    <string name="title_action_bar_account_information">ACCOUNT INFORMATION</string>
    <string name="title_action_bar_company_information">COMPANY INFORMATION</string>
    <string name="title_action_bar_account">Account</string>
    <string name="title_action_bar_company">Company</string>
    <string name="title_action_bar_staff_list">Staff List</string>
    <string name="title_action_bar_site_list">Site List</string>
    <string name="required_field">*</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_contact">Mobile Number</string>
    <string name="hint_suburb">Suburb</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_email">Email</string>
    <string name="hint_des">Description of Injury</string>
    <string name="hint_com_name">Company Name</string>
    <string name="hint_contact_per">Contact Person</string>
    <string name="hint_com_phone">Company Phone</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="lbl_GP">GP Referral</string>
    <string name="hint_yes">Y</string>
    <string name="hint_no">N</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="lbl_Treatment">Type of Treatment</string>
    <string name="hint_type_treat_phy">0</string>
    <string name="hint_type_treat_exe">1</string>
    <string name="hint_type_treat_hand">2</string>
    <string name="txt_type_treat_phy">Physiotherapy</string>
    <string name="txt_type_treat_exe">Exercise Rehab</string>
    <string name="txt_type_treat_han">Hand Therapy</string>
    <string name="title_activity_faqs">FAQsActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="welcome">Welcome to REDiMED</string>
    <string name="phone_code">+61</string>
    <string name="hint_phone">Phone Number</string>
    <string name="btn_requestCode">Continue</string>
    <string name="btn_VerifyCode">Verify</string>
    <string name="btn_ForgetPin">Forget Pin</string>
    <string name="hint_code">Verify Code</string>
    <string name="title_bottom_activation">© REDIMED 2015 - App Design by Meditek</string>
    <string name="text_contains">Enter your phone number and click continue</string>
    <string name="setting_title">Setting</string>
    <string name="setting_company">COMPANY</string>
    <string name="setting_account">ACCOUNT</string>
    <string name="setting_profile">PATIENT PROFILE</string>
    <string name="complete_profile">Incomplete Profile</string>
    <string name="add_new">Add New Account</string>
    <string name="change_pass">Change Password</string>
    <string name="about">About Redimed</string>
    <string name="site_list">Site List</string>
    <string name="staff_list">Staff List</string>
    <string name="other">Other services</string>
    <string name="setting_logout">LOGOUT</string>
    <string name="logout">Log Out</string>
    <string name="none">NONE</string>
    <string name="select_type">Select Type</string>
    <string name="appt_type">Appointment Type</string>
    <string-array name="appointment_type">
        <item>Telehealth</item>
        <item>OnSite</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="faqs_btn">FAQs</string>
    <string name="FAQs">FAQs</string>
    <string name="staff_detail">Staff Detail</string>
    <string name="staff_information">STAFF INFORMATION</string>
    <string name="company_information">COMPANY INFORMATION</string>
    <string name="company">Company</string>
    <string name="company_detail">Company Detail</string>
    <string name="change_pin">Change Pin</string>
    <string name="change_pin_number">Change Pin Number</string>
    <string name="current_pin">Pin Number</string>
    <string name="new_pin">New Pin Number</string>
    <string name="confirm_pin">Comfirm New Pin Number</string>
    <string name="error_pin">Please input your field is 6 characters</string>
    <string name="token_expired">Sorry for inconvenience, please login application again!</string>
    <string name="btn_primary">Settings</string>
    <string name="btn_foreign">Skip</string>
    <string name="title_connection">Can\'t connect to Server!</string>
    <string name="message_connection">Please check Wifi or Cellular in your device settings to use full our service!</string>
    <string name="account">Account</string>
    <string name="patient_infomation">PATIENT INFORMATION</string>
    <string name="loadding">Loading</string>
    <string name="confirm_sign">Please sign consents form before booking an appointment with Redimed</string>
    <string name="confirm_complete">Complete Request</string>
    <string name="sign_edit">Edit Signature</string>
    <string name="sign_clear">Clear</string>
    <string name="sign_cancel">Cancel</string>
    <string name="sign_save">Save Signature</string>
    <string name="no_data_result">No Data Result</string>
    <string name="no_image_result">No Image</string>
    <string name="btn_continue">Continue</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_camera">Camera</string>
    <string name="work">Work related</string>
    <string name="not_work">Not work related</string>
    <string name="service">Service requested:</string>
    <string name="title_patient">Patient Details</string>
    <string name="salutation">Salutation(*):</string>
    <string name="claim">Claim No.</string>
    <string name="name">Name(*)</string>
    <string name="name_family">Family</string>
    <string name="name_given">Given</string>
    <string name="dob">DOB(*):</string>
    <string name="occupation">Occupation(*):</string>
    <string name="address">Address(*)</string>
    <string name="address_suburb">Suburb</string>
    <string name="address_postcode">Postcode</string>
    <string name="telephone">Telephone(*):</string>
    <string name="tele_home">Home</string>
    <string name="tele_mobile">Mobile</string>
    <string name="tele_work">Work</string>
    <string name="nos">Next of kin:</string>
    <string name="nos_tele">Telephone</string>
    <string name="nos_email">Email</string>
    <string name="title_health_insurance">Health Insurance Details</string>
    <string name="medicare">Medicare</string>
    <string name="medicare_number">Number</string>
    <string name="medicare_position">Position number</string>
    <string name="medicare_expiry">Expiry</string>
    <string name="ques_insurance">Do you have private health insurance?</string>
    <string name="insurance_fund">Health fund name</string>
    <string name="insurance_membership">Membership number</string>
    <string name="ques_hospital">Do you have hospital cover?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ques_veteran">Veteran affairs number:</string>
    <string name="card">Card holder:</string>
    <string name="na">N/A</string>
    <string name="gold">Gold</string>
    <string name="white">White</string>
    <string name="hint_na">na</string>
    <string name="hint_gold">gold</string>
    <string name="hint_white">white</string>
    <string name="injury">Injury</string>
    <string name="illness">General illness</string>
    <string name="title_image">Image</string>
    <string name="fileSuburb">suburb.json</string>
    <string name="loading">Loading</string>
    <string name="confirm_alert">Please accept consent and submit booking request</string>
    <string name="redisite">Redisite</string>
    <string name="blue_tracking">List Tracking</string>
    <string name="not_title">Workinjury</string>
    <string name="alert_wrong_phone">Phone Number Invalid</string>
    <string-array name="medical_history_arrays">
        <item>Asthma</item>
        <item>Epilepsy</item>
        <item>Heart condition</item>
        <item>High cholesterol</item>
        <item>Diabetes type I</item>
        <item>Diabetes type II</item>
        <item>High blood pressure</item>
        <item>Arthritis</item>
        <item>Blood condition</item>
    </string-array>
    <string-array name="medical_history_name_arrays">
        <item>medic_his1</item>
        <item>medic_his2</item>
        <item>medic_his3</item>
        <item>medic_his4</item>
        <item>medic_his5</item>
        <item>medic_his6</item>
        <item>medic_his7</item>
        <item>medic_his8</item>
        <item>medic_his9</item>
    </string-array>
    <string-array name="medical_history_ref_arrays">
        <item>field_2_15_0</item>
        <item>field_2_15_1</item>
        <item>field_2_15_2</item>
        <item>field_2_16_0</item>
        <item>field_2_16_1</item>
        <item>field_2_16_2</item>
        <item>field_2_17_0</item>
        <item>field_2_17_1</item>
        <item>field_2_17_2</item>
    </string-array>
    <string-array name="medical_history_refRow_arrays">
        <item>row_2_15</item>
        <item>row_2_15</item>
        <item>row_2_15</item>
        <item>row_2_16</item>
        <item>row_2_16</item>
        <item>row_2_16</item>
        <item>row_2_17</item>
        <item>row_2_17</item>
        <item>row_2_17</item>
    </string-array>
</resources>