<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider5"
    android:orientation="vertical"
    tools:context="patient.telehealth.redimed.workinjury.pin.PinFragment">

    <include android:id="@+id/toolBar" layout="@layout/tool_bar" />

    <LinearLayout
        android:id="@+id/layoutChangePin"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtCurrentPin"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_edit_text_white"
            android:gravity="center"
            android:hint="@string/current_pin"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingEnd="5dp"
            android:paddingLeft="0dp"
            android:paddingRight="5dp"
            android:paddingStart="0dp"
            android:fontFamily="sans-serif"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtNewPin"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_edit_text_white"
            android:gravity="center"
            android:hint="@string/new_pin"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:paddingEnd="5dp"
            android:paddingLeft="0dp"
            android:paddingRight="5dp"
            android:paddingStart="0dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtConfirmPin"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_edit_text_white"
            android:gravity="center"
            android:hint="@string/confirm_pin"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingEnd="5dp"
            android:paddingLeft="0dp"
            android:paddingRight="5dp"
            android:paddingStart="0dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/abc_text_size_subhead_material"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_type_login"
            android:enabled="true"
            android:text="@string/change_pin_number"
            android:textAllCaps="false"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
